Fixed product display and alignment

--- a/FashionShop/OCS.MVC/Content/Site.css
+++ b/FashionShop/OCS.MVC/Content/Site.css
@@ -45,20 +45,24 @@ textarea {
     background-color:whitesmoke
 }
 
-.prodContainer{
-    background-color:white;
+.prodContainer {
+    background-color: white;
 }
-.imgContainer{
+
+.imgContainer {
     height: 300px;
-    width:200px;
 }
+
 .prodContainer img {
-    max-height: 100%;
+    height: 100%;
     max-width: 100%;
-    
-    display:block;
-    margin:auto;
+
+    object-fit: contain;
+
+    margin-left: auto;
+    margin-right: auto;
 }
+
 .prodContainer .prodContainer-body {
     padding-left: 5px;
     padding-right: 5px;
@@ -68,7 +72,6 @@ textarea {
     height: 100%;
     background-color: white
 }
-
 .prodContainer-body h4 {
     text-align: center;
 }
